--- a/DREAM11_multiobjective-1.ipynb
+++ b/DREAM11_multiobjective-1.ipynb
@@ -767,25 +767,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter solution number to see the team : \n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_2200\\2940901316.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mwhile\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0msol_no\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Enter solution number to see the team : \"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[1;32mif\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msol_no\u001b[0m\u001b[1;33m>\u001b[0m\u001b[1;36m10\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0msol_no\u001b[0m \u001b[1;33m<\u001b[0m \u001b[1;36m0\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Invalid Input!!. Please Choose a solution number between 0 and 9\"\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\"(both inclusive)\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+      "Enter solution number to see the team : 2\n",
+      "Solution number chosen is 2\n",
+      "\n",
+      "The Optimum Team for the upcoming match based on your risk tolerance and solution number is shown below:- \n",
+      "\n",
+      "The Captain of the Team is Virat Kohli(BAT) from INDIA\n",
+      "The Vice Captain of the Team is Joe Root(BAT) from ENGLAND\n",
+      "\n",
+      "Other Players:- \n",
+      "\n",
+      "Abhimanyu Easwaran(BOWL) from INDIA\n",
+      "Dom Bess(BOWL) from ENGLAND\n",
+      "Jos Buttler(WKT) from ENGLAND\n",
+      "Wriddhiman Saha(AR) from INDIA\n",
+      "Ishant Sharma(AR) from INDIA\n",
+      "Sam Curran(AR) from ENGLAND\n",
+      "Haseeb Hameed(AR) from ENGLAND\n",
+      "Ollie Pope(BAT) from ENGLAND\n",
+      "Rohit Sharma(BOWL) from INDIA\n"
      ]
     }
    ],
